@@ -38,3 +38,4 @@ Added a Module Config option for the path to postsuper, which is used instead of
 Postfix configuration parameters are read from main.cf directly, instead of calling the postconf command (which is slow).
 ---- Changes since 1.340 ----
 Added Module Config options for stop, start and reload commands.
+Allow map files are now checked when listing and editing virtusers and other map types.
